 - Fixed bug in save() (Thanks Laurent Monrouzies)
 - Removed annoying line in set_random() (Thanks Dale Francum)
 - Added get_time_info (Thanks Dale Francum)
 - Removed 'use Data::Dumper;' from mpc.pl and MPD.pm
 - Added support for new MPD-functions:
 'outputs', 'enableoutputs', 'disableoutputs', 'commands' and 'notcommands'
 - Fixed bug in get_title() where old title would get returned
 - Fixed bug in playlist() where playlist was never updated

0.12.0-rc4
 - Old bug where $playlist[0] contained undef removed again :)
 - crop() function added (removes all songs but the playing)
 - Fixed some bugs and errorhandling in mpc.pl

0.12.0-rc3
 - (almost) total rewrite of module

0.12.0-rc2
 - Changed default port to 6600
 - Removed UNPAUSE_ON_PLAY setting, as this is now default in MPD
 - Added urlhandlers()
 - Fixed seek()
 - Small bugfixes
 - Bugfixes in mpc.pl (playlist() and volume())
 - Updated ACK-error handling (geterror() changed, seterror() added)
 - Add 'plchanges'-support in getplaylist()
 - Added $config{'ALLOW_TOGGLE_STATES'}
 - Added deleteid() / moveid() / playid() / seekid() / swapid()
 - Removed deprecated 'unpause-on-play'-code

0.10.0-rc1
 - No changes

0.10.0-alpha7
 - Major speedup. Playlist was fetched way too many times
 - Another major speedup. Playlist is now only fetched when needed!
 - Added %config, for changing default behavior
 - Old $number-- in play() was removed.
 - Stupid bug where last song was not saved in @playlist removed
 - Rewrote searchadd() to utilize 'command_list_begin'/'command_list_end' (Much faster now)
 - Fixed bug where search() didn't return the last song found
 - Small rewrite in setrepeat() and setrandom()
 - Typos
 - Fixed bugs and bugs and bugs and bugs
 - Added a destructor
 - Rewrote all pod-documentation
 - Tabindented all
 - Removed 'unfinished subs' and 'todo'
 - Probably more stuff

0.10.0-alpha6
 - Changed @playlist syntax ($playlist[song-number]{info-to-get} eg. $playlist[42]{'file'})