@@ -6,7 +6,9 @@
  - Added support for new MPD-functions:
  'outputs', 'enableoutputs', 'disableoutputs', 'commands' and 'notcommands'
  - Fixed bug in get_title() where old title would get returned
- - Fixed bug in playlist() where playlist was never updated
+ - Fixed bug where playlist was not updated (Thanks hannes)
+ - Added playlist_changes() so clients can update their playlist (Thanks hannes)
+ - Updated _get_playlist() (Thanks hannes)
 
 0.12.0-rc4
  - Old bug where $playlist[0] contained undef removed again :)
